--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span data-node-name="greeting">Hey</span>
         <span data-node-name="name">Divya</span>
       </h1>
-      <p class="two" data-node-name="greetingText">a.k.a Bailando Girl / Desi Girl / Siri</p>
+      <p class="two" data-node-name="greetingText">a.k.a. Bailando Girl / Desi Girl / Siri</p>
     </div>
     <div class="three">
       <p data-node-name="text1">It's your birthday!!! :D</p>
@@ -39,7 +39,7 @@
       </p>
       <p class="idea-4" data-node-name="text5Entry">Because,</p>
       <p class="idea-5">
-        <span data-node-name="text5Content">You have been a great friend to me!</span>
+        <span data-node-name="text5Content">You have been a wonderful friend to me!</span>
         <span class="smiley" data-node-name="smiley">:)</span>
       </p>
       <p class="idea-6">
@@ -53,7 +53,7 @@
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
         <h5 data-node-name="wishText">To my dear friend, who deserves the best. I wish that you get to experience every
-          happiness that your heart can hold. Keep smiling :) You deserve it!
+          happiness your heart can hold. Keep smiling :) You deserve it!
         </h5>
       </div>
     </div>
